--- a/config.json
+++ b/config.json
@@ -1,1 +1,5 @@
-
+{
+    "discord_webhook": "https://discord.com/api/webhooks/1374056230967840828/7zHLaQZPCXR7kIilx02v_y9IgBPEYPRxEC-RS-_TqVg1ZomNVgAXGORnUksW7awvPr5X",
+    "current_season_config": "https://about:blank",
+    "default_export_method": "auto"
+}
